preparing first section

--- a/index.html
+++ b/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HangMan Game</title>
+  <link rel="stylesheet" href="./project.css" />
+</head>
+<body>
+  <script src="./main.js"></script>
+  <div class="hero">
+    <div class="con1">
+      <h1 class="intro">Welcome Play Now!!</h1>
+    <div id="start"><button > START </button></div><br><br><br><br>
+ <div class="music" ><button > music </button></div></div>
+   </div>
+    
+  <div class="con2"> 
+<div class="left">
+<img src />
 
-    <title></title>
-  </head>
+</div>
+<div class="right">
 
-  <body>
-    <img src="./logo-mail V02.svg" style="width: 300px" />
-    <h1 id="title" style="text-align: center; margin-top: 50px"></h1>
 
-    <script>
-      const currentDirectory = window.location.pathname.split("/");
-      const pageTitle = currentDirectory[currentDirectory.length - 2];
-      document.title = pageTitle;
-      const arrowTitle = "===> " + "Practice: " + pageTitle + " <===";
-      document.querySelector("#title").innerText = arrowTitle;
-    </script>
+</div>
 
-    <script src="main.js"></script>
-  </body>
+
+  </div>
+</body>
 </html>
