--- a/index.html
+++ b/index.html
@@ -11,21 +11,27 @@
   <script src="./main.js"></script>
   <div class="hero">
     <div class="con1">
-      <h1 class="intro">Welcome Play Now!!</h1>
-    <div id="start"><button > START </button></div><br><br><br><br>
+      <h1 class="intro">Welcome!! </h1>
+    <div id="start"><button > START </button></div><br><br>
  <div class="music" ><button > music </button></div></div>
    </div>
     
   <div class="con2"> 
-<div class="left">
-<img src />
-
+<div class="first">
+<img src="./pic1.png "/>
 </div>
-<div class="right">
-
-
+<div class="second">
+<!-- number of lines according to number of  the letter  -->
+<span></span>
+<span></span>
+<span></span>
+<span></span>
+<span></span>
 </div>
+<div class="third">
 
+  <button>a</button><button>b</button><button>c</button><button>d</button><button>e</button><button>f</button><button>g</button><button>h</button><button>i</button><button>j</button><button>k</button><button>l</button><button>m</button><button>n</button><button>o</button><button>p</button><button>q</button><button>r</button><button>s</button><button>t</button><button>u</button><button>v</button><button>w</button><button>x</button><button>y</button><button>z</button>
+</div>
 
   </div>
 </body>
