--- a/index.html
+++ b/index.html
@@ -16,22 +16,23 @@
  <div class="music" ><button > music </button></div></div>
    </div>
     
-  <div class="con2"> 
+  <div class="con2">
+     <div class="title "><h2>Seies Show</h2>
 <div class="first">
 <img src="./pic1.png "/>
 </div>
 <div class="second">
 <!-- number of lines according to number of  the letter  -->
-<span></span>
-<span></span>
-<span></span>
-<span></span>
-<span></span>
-</div>
-<div class="third">
 
-  <button>a</button><button>b</button><button>c</button><button>d</button><button>e</button><button>f</button><button>g</button><button>h</button><button>i</button><button>j</button><button>k</button><button>l</button><button>m</button><button>n</button><button>o</button><button>p</button><button>q</button><button>r</button><button>s</button><button>t</button><button>u</button><button>v</button><button>w</button><button>x</button><button>y</button><button>z</button>
-</div>
+</div></div>
+<div id="third">
+
+  
+
+  </div>
+  <div class="con3">
+ <h3>Result=</h3>
+ <button> Try again </button>
 
   </div>
 </body>
