--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
   <link rel="stylesheet" href="./project.css" />
 </head>
 <body>
-  <script src="./main.js"></script>
+  <!--  how to link strat button with con 2 ?  -->
+  <script src="./main.js">
+    // const Start = document.createElement('button').onclick=function(){
+    //   location.href=""
+    // }
+  </script>
   <div class="hero">
     <div class="con1">
       <h1 class="intro">Welcome!! </h1>
-    <div id="start"><button > START </button></div><br><br>
- <div class="music" ><button > music </button></div></div>
    </div>
     
   <div class="con2">
@@ -30,8 +33,11 @@
   </div>
   <div class="con3">
  <h3>Result=</h3>
- <button> Try again </button>
+
 
   </div>
 </body>
+<div class="footer">
+  
+</div>
 </html>
