--- a/index.html
+++ b/index.html
@@ -8,36 +8,20 @@
   <link rel="stylesheet" href="./project.css" />
 </head>
 <body>
-  <!--  how to link strat button with con 2 ?  -->
+  <div class="container" >
+
+
+
+
+  </div>
   <script src="./main.js">
-    // const Start = document.createElement('button').onclick=function(){
-    //   location.href=""
-    // }
-  </script>
-  <div class="hero">
-    <div class="con1">
-      <h1 class="intro">Welcome!! </h1>
-   </div>
-    
-  <div class="con2">
-     <div class="title "><h2>Seies Show</h2>
-<div class="first">
-<img src="./pic1.png "/>
-</div>
-<div class="second">
-<!-- number of lines according to number of  the letter  -->
-
-</div></div>
-<div id="third">
-
-  </div>
-  <div class="con3">
- <h3>Result=</h3>
 
 
-  </div>
+
+
+
+
+</script>
 </body>
-<div class="footer">
-  
-</div>
+
 </html>
