--- a/index.html
+++ b/index.html
@@ -7,21 +7,29 @@
   <title>HangMan Game</title>
   <link rel="stylesheet" href="./project.css" />
 </head>
-<body>
-  <div class="container" >
-
-
-
-
-  </div>
+<body> 
   <script src="./main.js">
-
-
-
-
-
-
 </script>
+ <div class="container"  id="container">
+    
+    <div id="p1" class="p1">
+    <button  id="pressstart" class="pressstart">Start Here !!</button></div>
+
+   
+    <div id="p2" class="p2">
+    <h1 class="h1" id="h1">Game Start </h1> 
+     <h3 class="h3" id="h3">Series show </h3>
+    <div class="BLetters" id="BLetters"></div>
+    <div class="img" id="img" ></div>
+     <div class="line" id="line"></div>
+  
+   </div>
+   <div class="p3" id="p3">
+
+
+   </div>
+</div>
+
 </body>
 
 </html>
