--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
     <h1 class="h1" id="h1">Game Start </h1> 
      <h3 class="h3" id="h3">Series show </h3>
     <div class="BLetters" id="BLetters"></div>
-    <div class="img" id="img" ></div>
+    <div> <img  src="./pic1.png"/></div>
+   
+    
      <div class="line" id="line"></div>
   
    </div>
    <div class="p3" id="p3">
-
+ 
 
    </div>
 </div>
