--- a/indexxxx.html
+++ b/indexxxx.html
@@ -17,9 +17,9 @@
      
     
       <div class="con2" id="con2">
-        <div class="title " id="title"><h2>Seies Show</h2> </div>
-            <div class="first">
-            <img src="./pic1.png "/>
+        <div class="title " id="title"><h2>Series Show</h2> </div>
+            <div class="first" id="first">
+            <!-- <img src="./pic1.png "/> -->
             </div>
             <div class="second">
              <!-- number of lines according to number of  the letter   -->
