--- a/indexxxx.html
+++ b/indexxxx.html
@@ -58,6 +58,8 @@
         If your chosen letter exists in the answer, then all places in the answer where that letter appear will be revealed.
         After you've revealed several letters, you may be able to guess what the answer is and fill in the remaining letters.
         Be warned, every time you guess a letter wrong you loose a life and the hangman begins to appear, piece by piece.</p>
+       <br><br><br>
+        <button class="back" id="back">Back</button>
     </div>
   </div></div>
  <script src="./nwe.js"> </script>
