--- a/indexxxx.html
+++ b/indexxxx.html
@@ -26,7 +26,7 @@
      
     
       <div class="con2" id="con2">
-        <div class="title " id="title"><h2 style="font-size: 50px;">Series Show</h2> </div>
+        <div class="title " id="title"><h2 style="font-size: 50px;">NETFLIX series </h2> </div>
         <div class="left" id="left">
           <div class="first" id="first"> 
            <img style="width: 400px; " class="child" id="child" src="./pic1.png"/></div>
